更新 ESPnet-SpeechLM 结论

--- a/Models/Toolkits/2025.02.21_ESPnet-SpeechLM.md
+++ b/Models/Toolkits/2025.02.21_ESPnet-SpeechLM.md
@@ -101,7 +101,7 @@ The toolkit is fully open-source, ensuring reproducibility and accessibility.
 
 To showcase its versatility, we present several use cases demonstrating the scalability and efficiency of ***ESPnet-SpeechLM***.
 These include building competitive SpeechLM-based automatic speech recognition (ASR) and text-to-speech (TTS) systems on datasets exceeding 200k hours of speech-text paired data (Section.\ref{asrtts_exp}).
-We also detail the creation of a 1.7B-parameter multi-task SpeechLM, pre-trained on ASR, TTS, TextLM, and AudioLM tasks, by leveraging 240 billion \textit{text tokens or audio frames} (Section.\ref{multitask_exp}).
+We also detail the creation of a 1.7B-parameter multi-task SpeechLM, pre-trained on ASR, TTS, TextLM, and AudioLM tasks, by leveraging 240 billion text tokens or audio frames (Section.\ref{multitask_exp}).
 
 </td><td>
 
@@ -224,7 +224,7 @@ With this template, the training sequences can be assembled automatically from t
 Preprocessing primarily involves tokenization.
 As some tokenizers are neural network-based and heavy, it is more efficient to conduct the tokenization offline.
 The tokenization is handled automatically by ***ESPnet-SpeechLM*** after receiving a folder for each train/valid/test set as follows.
-Specifically, an index file is provided for each data item, with the format of \texttt{example-id content} in each line.
+Specifically, an index file is provided for each data item, with the format of example-id content in each line.
 The name of these index files should correspond to the \textcolor{blue}{item\_name} in the task template.
 
 ```
@@ -237,8 +237,8 @@ The name of these index files should correspond to the \textcolor{blue}{item\_na
     - (line) example-id2 text2
 ```
 
-***ESPnet-SpeechLM*** processes these files to generate a unified \texttt{data.json} file for each dataset, which contains tokenized results and metadata.
-\texttt{data.json} is the data format in both training and evaluation.
+***ESPnet-SpeechLM*** processes these files to generate a unified data.json file for each dataset, which contains tokenized results and metadata.
+data.json is the data format in both training and evaluation.
 During preprocessing, all tokenizers in use are detected, and a joint vocabulary is constructed automatically.
 
 </td><td>
@@ -254,7 +254,7 @@ Besides common training configurations like optimization, batch size, and distri
 ***ESPnet-SpeechLM*** provides multiple implementations of multi-stream language models (**VALL-E**[^09], [^33], **UniAudio**[^12]).
 The implementations of multi-stream language models all rely on the Transformer body implementation.
 We provide the ESPnet built-in Transformer implementation to maximize flexibility;
-alternatively, we support any \texttt{AutoModelForCausalLM} from HuggingFace Transformers to leverage pre-trained text LLMs
+alternatively, we support any AutoModelForCausalLM from HuggingFace Transformers to leverage pre-trained text LLMs
 Also, following **Moshi**[^14], custom weights can be provided during loss computing to balance the tokens from different tokenization methods.
 This is usually to guarantee one audio frame has the same loss weight as one non-audio token.
 Lastly, in addition to applying the cross-entropy loss, the toolkit also supports reinforcement learning from human feedback (RLHF) for SpeechLMs (see [^34] for details).
@@ -291,10 +291,11 @@ Besides the existing evaluation scripts, a model in a new task can be evaluated 
 
 To build SpeechLMs with versatile functionalities, ***ESPnet-SpeechLM*** flexibly supports multitasking.
 As the SpeechLMs have the same modeling procedure for all tasks, achieving multitasking training is to fuse the training sequences from different tasks in the mini-batches.
-Similar to single-task training, for each task, the task template definition (Section.\ref{template}) and preprocessing (Section.\ref{preprocessing}) are completed separately, which gives multiple tokenized datasets and the corresponding \texttt{data.json} files\footnote{
-  Especially, these preprocessing works are easy to distribute and are suitable for collaborative works.
-}.
-The data loader accepts a list of \texttt{data.json} and fuses these datasets before training, which allows the users to dynamically change the multitasking data setups.
+Similar to single-task training, for each task, the task template definition (Section.\ref{template}) and preprocessing (Section.\ref{preprocessing}) are completed separately, which gives multiple tokenized datasets and the corresponding data.json files.
+
+Note: Especially, these preprocessing works are easy to distribute and are suitable for collaborative works.
+
+The data loader accepts a list of data.json and fuses these datasets before training, which allows the users to dynamically change the multitasking data setups.
 Mini-batches are sampled from the fused datasets during training.
 Additionally, the sampling ratio among these datasets is adjustable to emphasize some specific data portions.
 
@@ -390,8 +391,11 @@ We collect open-sourced data for all experiments.
 Our data contains 200k hours of speech and 115B tokens of text, most in English.
 When expanding speech data into ASR, TTS, and AudioLM tasks, this is equivalent to 240B \textit{text tokens or audio frames}.
 Detailed data composition is in Appendix \ref{sec:appendix2}.
-We balance the weights for text, SSL, and codec tokens as 1: 0.5: 0.0625\footnote{Each audio frame is represented by 1 SSL token and 8 codec tokens.
-This ratio is to ensure (1) the text tokens have the same weight as the audio frames, and (2) SSL tokens have the same weight as 8 codec tokens combined.}.
+We balance the weights for text, SSL, and codec tokens as 1: 0.5: 0.0625
+
+Note: Each audio frame is represented by 1 SSL token and 8 codec tokens.
+This ratio is to ensure (1) the text tokens have the same weight as the audio frames, and (2) SSL tokens have the same weight as 8 codec tokens combined.
+
 The training used 8/24 H100 GPUs for single/multi-task training.
 We use batch size as large as around 2M \textit{frames or tokens} and a constant learning rate of 2e-4, with 10k warmup steps.
 We train the model for 2 data passes.
@@ -460,6 +464,10 @@ We also provide user cases for both single-task and multi-task training, showing
 The toolkit promises to keep full transparency in data, code, recipes, and pre-trained models.
 
 </td><td>
+
+本文展示了 ***ESPnet-SpeechLM*** 工具包, 它涵盖了语音语言模型开发的整个流程, 并在多个设计选择方面提供了广泛的支持.
+我们还为单任务训练和多任务训练提供了用户案例, 展示了市场上其他模型的竞争性能.
+工具包承诺在数据, 代码, 配方, 和预训练模型方面保持全面透明.
 
 </td></tr></table>
 
