--- a/Models/SpeechLM/S2S/2023.05.22_TWIST.md
+++ b/Models/SpeechLM/S2S/2023.05.22_TWIST.md
@@ -23,12 +23,14 @@
   - [Github](https://github.com/facebookresearch/textlesslib/tree/main/examples/twist)
   - [Demo](https://pages.cs.huji.ac.il/adiyoss-lab/twist/)
 - 文件:
-  - [ArXiv](_PDF/2305.13009v3__TWIST__Textually_Pretrained_Speech_Language_Models.pdf)
-  - [Publication](_PDF/2305.13009p0__TWIST__NeurIPS2023.pdf)
+  - [ArXiv](../_PDF/2305.13009v3__TWIST__Textually_Pretrained_Speech_Language_Models.pdf)
+  - [Publication](../_PDF/2305.13009p0__TWIST__NeurIPS2023.pdf)
 
 </details>
 
 ## Abstract: 摘要
+
+<table><tr><td width="50%">
 
 Speech language models (SpeechLMs) process and generate acoustic data only, without textual supervision.
 In this work, we propose ***TWIST***, a method for training SpeechLMs using a warm-start from a pretrained textual language models.
@@ -39,14 +41,54 @@ Based on our observations, we present the largest (to the best of our knowledge)
 We additionally introduce two spoken versions of the StoryCloze textual benchmark to further improve model evaluation and advance future research in the field.
 We make speech samples, code and models publicly available: [this https URL](https://pages.cs.huji.ac.il/adiyoss-lab/twist/).
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
